--- a/our-services/exterior-decorating.html
+++ b/our-services/exterior-decorating.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Exterior Decorating | Exterior House Painting Askern & Doncaster (DN6)</title>
 
@@ -11,139 +11,116 @@
 
 <link rel="canonical" href="https://steely1968.github.io/our-services/exterior-decorating/">
 
-<!-- Preload image for SEO + speed -->
+<!-- Preload image -->
 <link rel="preload" as="image" href="/images/house-before-after.webp">
 
-<!-- Open Graph -->
-<meta property="og:title" content="Exterior Decorating Services | Askern & Doncaster DN6">
-<meta property="og:description" content="Exterior house painting and decorating services in Askern & Doncaster DN6. Professional Sandtex finishes, fence & wall painting, and full surface preparation.">
-<meta property="og:url" content="https://steely1968.github.io/our-services/exterior-decorating/">
-<meta property="og:image" content="https://steely1968.github.io/house-before-after.webp">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="800">
-
-<!-- Twitter -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://steely1968.github.io/house-before-after.webp">
+<!-- Pinch-zoom for image only -->
+<script type="module">
+import 'https://cdn.jsdelivr.net/npm/pinch-zoom-element@2/dist/pinch-zoom.js';
+</script>
 
 <style>
-body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff;}
-header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
-header img{height:90px;}
-nav{display:flex;align-items:center;gap:15px;}
-nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;color:#000;}
-nav a:hover{background:#e2e2e2;}
-.call-button{background-color:#1a7f33;color:#fff;}
-.call-button:hover{background-color:#166b2b;}
-main{padding:20px;max-width:900px;margin:auto;}
-h1,h2{margin-top:10px;}
-ul{padding-left:20px;}
-.quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
-.quick-facts ul{padding-left:20px;}
-footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
-footer a{color:#1864d8;font-weight:bold;text-decoration:none;}
-footer a:hover{text-decoration:underline;}
+body {
+margin: 0;
+font-family: Arial, sans-serif;
+line-height: 1.6;
+color: #000;
+background: #fff;
+}
+
+/* Header */
+header {
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 15px 20px;
+background: #f4f4f4;
+border-bottom: 2px solid #ddd;
+}
+header img {
+height: 90px;
+}
+nav {
+display: flex;
+align-items: center;
+gap: 15px;
+}
+nav a {
+font-weight: bold;
+text-decoration: none;
+padding: 10px 16px;
+border-radius: 6px;
+color: #000;
+}
+nav a:hover {
+background: #e2e2e2;
+}
+.call-button {
+background-color: #1a7f33;
+color: #fff;
+}
+.call-button:hover {
+background-color: #166b2b;
+}
+
+main {
+padding: 20px;
+max-width: 900px;
+margin: auto;
+}
+
+h1, h2 {
+margin-top: 10px;
+}
+
+ul {
+padding-left: 20px;
+}
+
+.quick-facts {
+background: #f8f8f8;
+padding: 20px;
+border-radius: 10px;
+border: 1px solid #ddd;
+margin: 25px 0;
+}
+
+footer {
+padding: 25px;
+text-align: center;
+font-size: 14px;
+color: #666;
+border-top: 1px solid #ddd;
+}
+footer a {
+color: #1864d8;
+font-weight: bold;
+text-decoration: none;
+}
+footer a:hover {
+text-decoration: underline;
+}
+
+/* Image zoom container */
+pinch-zoom {
+width: 100%;
+display: block;
+overflow: hidden;
+border-radius: 10px;
+touch-action: pinch-zoom;
+}
+
 img {
-  max-width: 100%;
-  height: auto;  
-  box-sizing: border-box; 
+max-width: 100%;
+height: auto;
+box-sizing: border-box;
 }
 picture {
-  display: block;
-  max-width: 100%; 
+display: block;
+max-width: 100%;
 }
-body {
-  overflow-x: hidden;
-}
+
 </style>
-
-<!-- LocalBusiness Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "LocalBusiness",
-"name": "Home Maintenance Services",
-"image": [
-"https://steely1968.github.io/logo.png",
-"https://steely1968.github.io/house-before-after.webp"
-],
-"url": "https://steely1968.github.io/",
-"telephone": "+447735873694",
-"priceRange": "£",
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6 0QA",
-"addressCountry": "UK"
-}
-}
-</script>
-
-<!-- Service Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "Service",
-"name": "Exterior Decorating",
-"serviceType": "Exterior house painting, staining, masonry painting, finish coatings",
-"provider": {
-"@type": "LocalBusiness",
-"name": "Home Maintenance Services",
-"telephone": "+447735873694"
-},
-"areaServed": {
-"@type": "Place",
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"addressCountry": "UK"
-}
-}
-}
-</script>
-
-<!-- ImageObject Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "ImageObject",
-"contentUrl": "https://steely1968.github.io/house-before-after.webp",
-"description": "Before and after exterior decorating project in Askern using Sandtex Brick Red masonry paint.",
-"name": "Exterior Decorating Before and After",
-"author": {
-"@type": "LocalBusiness",
-"name": "Home Maintenance Services"
-}
-}
-</script>
-
-<!-- FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "Do you prepare exterior surfaces?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, all surfaces are cleaned, sanded and primed before painting to ensure a long-lasting professional finish." }
-},
-{
-"@type": "Question",
-"name": "Which exterior surfaces do you paint?",
-"acceptedAnswer": { "@type": "Answer", "text": "Walls, masonry, fences, gates, exterior woodwork, doors, windows, and more." }
-},
-{
-"@type": "Question",
-"name": "Do you serve the whole Doncaster area?",
-"acceptedAnswer": { "@type": "Answer", "text": "We cover Askern, Doncaster DN6 and all surrounding South Yorkshire areas." }
-}
-]
-}
-</script>
 
 </head>
 <body>
@@ -163,10 +140,11 @@ body {
 
 <p>Transform and protect your property with our professional exterior decorating services. We specialise in exterior house painting, masonry painting, fence and gate painting, wood staining, and protective coatings for all outdoor surfaces. With years of experience and attention to detail, we provide reliable, high-quality workmanship across Askern and Doncaster DN6.</p>
 
-<!-- BEFORE / AFTER IMAGE -->
 <h2>Recent Exterior Painting Project</h2>
 <p>Here’s a before and after example of a home recently painted using <strong>Sandtex Brick Red masonry paint</strong> — giving the property a modern, protected, and refreshed look.</p>
 
+<!-- ✅ Only this image zooms -->
+<pinch-zoom>
 <picture>
 <source srcset="https://steely1968.github.io/images/house-before-after.webp" type="image/webp">
 <img src="https://steely1968.github.io/images/house-before-after.webp"
@@ -175,6 +153,7 @@ loading="lazy"
 width="1200"
 height="800">
 </picture>
+</pinch-zoom>
 
 <h2>Our Exterior Decorating Services</h2>
 <ul>
