--- a/our-services/exterior-decorating.html
+++ b/our-services/exterior-decorating.html
@@ -11,13 +11,7 @@
 
 <link rel="canonical" href="https://steely1968.github.io/our-services/exterior-decorating/">
 
-<!-- Preload image -->
 <link rel="preload" as="image" href="/images/house-before-after.webp">
-
-<!-- Pinch-zoom for image only -->
-<script type="module">
-import 'https://cdn.jsdelivr.net/npm/pinch-zoom-element@2/dist/pinch-zoom.js';
-</script>
 
 <style>
 body {
@@ -28,7 +22,6 @@ color: #000;
 background: #fff;
 }
 
-/* Header */
 header {
 display: flex;
 align-items: center;
@@ -101,23 +94,45 @@ footer a:hover {
 text-decoration: underline;
 }
 
-/* Image zoom container */
-pinch-zoom {
-width: 100%;
-display: block;
-overflow: hidden;
-border-radius: 10px;
-touch-action: pinch-zoom;
-}
-
 img {
 max-width: 100%;
 height: auto;
-box-sizing: border-box;
+cursor: pointer;
 }
+
 picture {
 display: block;
 max-width: 100%;
+}
+
+/* LIGHTBOX */
+#lightbox {
+position: fixed;
+display: none;
+top: 0;
+left: 0;
+width: 100vw;
+height: 100vh;
+background: rgba(0,0,0,0.9);
+justify-content: center;
+align-items: center;
+z-index: 9999;
+}
+
+#lightbox img {
+max-width: 95%;
+max-height: 90vh;
+border-radius: 10px;
+}
+
+#lightbox .close-btn {
+position: absolute;
+top: 15px;
+right: 20px;
+font-size: 40px;
+color: #fff;
+cursor: pointer;
+font-weight: bold;
 }
 
 </style>
@@ -143,17 +158,16 @@ max-width: 100%;
 <h2>Recent Exterior Painting Project</h2>
 <p>Here’s a before and after example of a home recently painted using <strong>Sandtex Brick Red masonry paint</strong> — giving the property a modern, protected, and refreshed look.</p>
 
-<!-- ✅ Only this image zooms -->
-<pinch-zoom>
+<!-- TAP-TO-OPEN IMAGE -->
 <picture>
 <source srcset="https://steely1968.github.io/images/house-before-after.webp" type="image/webp">
 <img src="https://steely1968.github.io/images/house-before-after.webp"
 alt="Before and after exterior house painting using Sandtex Brick Red paint in Askern DN6."
 loading="lazy"
 width="1200"
-height="800">
+height="800"
+onclick="openLightbox(this.src)">
 </picture>
-</pinch-zoom>
 
 <h2>Our Exterior Decorating Services</h2>
 <ul>
@@ -198,8 +212,23 @@ height="800">
 <p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener noreferrer">Visit our Facebook Profile</a></p>
 </footer>
 
+<!-- LIGHTBOX -->
+<div id="lightbox">
+<span class="close-btn" onclick="closeLightbox()">×</span>
+<img id="lightbox-img" src="">
+</div>
+
 <script>
 document.getElementById("currentYear").textContent = new Date().getFullYear();
+
+function openLightbox(src) {
+document.getElementById("lightbox-img").src = src;
+document.getElementById("lightbox").style.display = "flex";
+}
+
+function closeLightbox() {
+document.getElementById("lightbox").style.display = "none";
+}
 </script>
 
 </body>
