--- a/location/doncaster.html
+++ b/location/doncaster.html
@@ -5,20 +5,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Exterior House Painting in Doncaster | Local Exterior Decorator DN1–DN12</title>
+<title>Exterior House Painting in Doncaster | Professional Exterior Decorating DN1–DN12</title>
 
-<meta name="description" content="Professional exterior decorating and house painting services across Doncaster (DN1–DN12). Trusted local decorator for masonry painting, fence painting, sanding, staining and full exterior restoration. Affordable, reliable and fully insured.">
+<meta name="description" content="Reliable and affordable exterior house painting in Doncaster. Specialist in masonry painting, fence painting, wood staining and full exterior restoration across DN1–DN12. Local, insured, trusted decorator.">
 
 <link rel="canonical" href="https://steely1968.github.io/locations/exterior-decorating-doncaster/">
 
 <style>
-/* Retains your original visual styling */
+/* Retains original page visual style */
 body {
 margin: 0;
 font-family: Arial, sans-serif;
 line-height: 1.6;
-color: #000;
 background: #fff;
+color: #000;
 }
 
 header {
@@ -41,10 +41,10 @@ gap: 15px;
 }
 
 nav a {
-font-weight: bold;
-text-decoration: none;
 padding: 10px 16px;
 border-radius: 6px;
+font-weight: bold;
+text-decoration: none;
 color: #000;
 }
 
@@ -53,18 +53,18 @@ background: #e2e2e2;
 }
 
 .call-button {
-background-color: #1a7f33;
+background: #1a7f33;
 color: #fff;
 }
 
 .call-button:hover {
-background-color: #166b2b;
+background: #166b2b;
 }
 
 main {
-padding: 20px;
 max-width: 900px;
 margin: auto;
+padding: 20px;
 }
 
 h1, h2 {
@@ -89,21 +89,19 @@ border-top: 1px solid #ddd;
 
 footer a {
 color: #1864d8;
-font-weight: bold;
 text-decoration: none;
 }
 
 footer a:hover {
 text-decoration: underline;
 }
-
 </style>
 
 </head>
 <body>
 
 <header>
-<img src="https://steely1968.github.io/logo.png" alt="Home Maintenance Services Logo - Doncaster Exterior Decorator">
+<img src="https://steely1968.github.io/logo.png" alt="Home Maintenance Services Doncaster - Local Exterior Decorator">
 <nav>
 <a href="/">Home</a>
 <a href="/our-services/exterior-decorating">Exterior Decorating</a>
@@ -116,73 +114,72 @@ text-decoration: underline;
 
 <h1>Exterior House Painting in Doncaster (DN1–DN12)</h1>
 
-<p>If you're looking for a reliable, affordable, and highly skilled <strong>exterior decorator in Doncaster</strong>, you’re in the right place. We provide professional exterior house painting and outdoor surface restoration across all Doncaster areas, including DN1, DN2, DN3, DN4, DN5, DN6, DN7, DN10 and surrounding villages.</p>
+<p>Looking for a reliable, skilled and affordable <strong>exterior house painter in Doncaster</strong>? We provide a full range of exterior decorating services across all Doncaster postcodes, including DN1–DN12. With years of experience, professional materials and attention to detail, we help homeowners protect and transform their properties with clean, long-lasting exterior finishes.</p>
 
-<p>From modernising tired masonry to protecting woodwork, fences, gates and render, our service focuses on durability, clean finishes, and long-lasting weather protection. Homeowners in Doncaster choose us for our attention to detail, quick turnaround, friendly service and competitive pricing.</p>
+<p>Whether your home needs a fresh coat of masonry paint, a full exterior colour update, or a tidy-up of fences and timberwork, we deliver neat, durable results and friendly customer service throughout every job.</p>
 
-<h2>Professional Exterior Decorating Across Doncaster</h2>
-
-<p>We specialise in transforming and protecting properties with premium exterior paint systems such as Sandtex masonry paint, weatherproof coatings and quality exterior wood finishes. Whether your home needs a full exterior repaint or small touch-ups, we ensure a durable and visually impressive finish.</p>
+<h2>Professional Exterior Decorating in Doncaster</h2>
+<p>We use trusted, weather-resistant paint systems including <strong>Sandtex masonry paint</strong> and premium exterior coatings designed to stay bright and protective year after year.</p>
 
 <ul>
 <li>Exterior masonry & render painting</li>
-<li>Brick, pebbledash, stone & concrete painting</li>
+<li>Brick, stone & concrete painting</li>
 <li>Fence, gate & shed painting</li>
-<li>Timber staining, varnishing & weatherproofing</li>
-<li>Full surface preparation (washing, sanding, priming)</li>
-<li>Flaking paint removal & restoration</li>
-<li>UPVC cleaning & recolouring (optional)</li>
+<li>Wood staining, varnishing & restoration</li>
+<li>Cleaning, sanding & priming for long-lasting adhesion</li>
+<li>Flaking paint removal & exterior preparation</li>
+<li>UPVC cleaning and colour restoration</li>
 </ul>
 
-<h2>Why Doncaster Homeowners Choose Us</h2>
+<h2>Why Doncaster Customers Choose Us</h2>
 
 <div class="quick-facts">
 <ul>
-<li>Trusted local exterior decorator serving all Doncaster DN postcodes</li>
-<li>High-quality Sandtex and premium paint systems for long-lasting results</li>
-<li>Friendly, reliable, fully insured service</li>
-<li>No call-out fee – free quotes and honest pricing</li>
-<li>Full surface preparation included with every job</li>
+<li>Trusted local exterior decorator covering the whole Doncaster area</li>
+<li>Premium paints (including Sandtex) for durable, weatherproof results</li>
+<li>Fully insured, friendly and reliable service</li>
+<li>No call-out fees – honest, affordable quotes</li>
+<li>Clear communication and tidy work from start to finish</li>
 </ul>
 </div>
 
-<h2>Serving All Doncaster Areas</h2>
-<p>We cover every Doncaster postcode including:</p>
+<h2>Areas We Cover in Doncaster</h2>
+<p>We work across all Doncaster postcodes including:</p>
 
 <ul>
-<li>Doncaster Town Centre (DN1)</li>
-<li>Bessacarr, Wheatley, Intake (DN2)</li>
-<li>Armthorpe, Edenthorpe (DN3)</li>
-<li>Bentley, Scawthorpe, Cusworth (DN5)</li>
-<li><strong>Askern (DN6)</strong></li>
-<li>Mexborough, Conisbrough (DN12)</li>
+<li>DN1 – Doncaster Town Centre</li>
+<li>DN2 – Intake, Wheatley</li>
+<li>DN3 – Armthorpe, Edenthorpe</li>
+<li>DN4 – Bessacarr, Balby</li>
+<li>DN5 – Bentley, Scawthorpe</li>
+<li>DN6 – <strong>Askern</strong>, Campsall, Norton</li>
+<li>DN7 – Stainforth, Hatfield</li>
+<li>DN11, DN12 – Tickhill, Conisbrough, Mexborough</li>
 </ul>
 
-<p>No matter where you’re located, we provide fast response times and convenient scheduling.</p>
+<p>No matter which part of Doncaster you’re in, we offer flexible booking times and quick response.</p>
 
-<h2>Before & After Projects</h2>
-<p>To see an example of our work, view a recent transformation completed in Askern:</p>
+<h2>View Our Work</h2>
+<p>See a recent transformation using Sandtex Brick Red:</p>
 
-<p><a href="/our-services/exterior-decorating">View before and after project →</a></p>
+<p><a href="/our-services/exterior-decorating"><strong>View Before & After Project →</strong></a></p>
 
 <h2>Frequently Asked Questions</h2>
 
 <h3>How much does exterior painting cost in Doncaster?</h3>
-<p>Prices vary depending on surface condition and size, but most Doncaster homes fall between <strong>£250–£1,200</strong>. We always provide a free, no-obligation quote.</p>
+<p>Most homes fall between <strong>£250–£1,200</strong> depending on size, materials and preparation needed. Every quote is free and no-obligation.</p>
 
-<h3>What paints do you use?</h3>
-<p>We primarily use <strong>Sandtex masonry paint</strong> for exterior walls and high-performance exterior wood coatings for fences, sheds and gates.</p>
+<h3>Do you carry out full preparation?</h3>
+<p>Absolutely. We clean, sand, scrape and prime surfaces to ensure the best possible finish and long-lasting results.</p>
 
-<h3>Do you prepare the surfaces first?</h3>
-<p>Yes, preparation is included. We clean, sand, scrape and prime surfaces to ensure a strong bond and long-lasting finish.</p>
+<h3>Which paints do you use?</h3>
+<p>We use high-quality exterior systems such as Sandtex masonry paint and specialised external wood coatings for fences, gates and sheds.</p>
 
-<h3>Are you insured?</h3>
-<p>Yes, we are fully insured for all residential and commercial exterior works.</p>
+<h3>Is your work insured?</h3>
+<p>Yes — we are fully insured for residential and commercial properties.</p>
 
-<h2>Get a Free Exterior Decorating Quote in Doncaster</h2>
-
-<p>For reliable and professional <strong>exterior house painting in Doncaster</strong>, get in touch today. We’re happy to offer advice, colour guidance and a free quote.</p>
-
+<h2>Request a Free Quote</h2>
+<p>For high-quality <strong>exterior decorating and house painting in Doncaster</strong>, get in touch today for friendly advice or a free quote.</p>
 <p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
@@ -196,55 +193,46 @@ text-decoration: underline;
 document.getElementById("currentYear").textContent = new Date().getFullYear();
 </script>
 
-<!-- FAQ + LocalBusiness SCHEMA -->
+<!-- Corrected Service Area Business Schema -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
-"@type": "LocalBusiness",
+"@type": "HomeAndConstructionBusiness",
 "name": "Home Maintenance Services Doncaster",
+"url": "https://steely1968.github.io/locations/exterior-decorating-doncaster/",
 "image": "https://steely1968.github.io/logo.png",
+"telephone": "07735873694",
+"description": "Exterior house painting and professional exterior decorating across Doncaster DN1–DN12.",
+
+"areaServed": [
+{ "@type": "City", "name": "Doncaster" },
+{ "@type": "AdministrativeArea", "name": "DN1–DN12" }
+],
+
+"serviceArea": {
+"@type": "Place",
 "address": {
 "@type": "PostalAddress",
 "addressLocality": "Doncaster",
 "addressRegion": "South Yorkshire",
 "postalCode": "DN",
-"addressCountry": "UK"
+"addressCountry": "GB"
+}
 },
-"servesArea": ["Doncaster","Askern","Armthorpe","Bentley","Scawthorpe","Wheatley","Edenthorpe"],
-"telephone": "07735873694",
-"url": "https://steely1968.github.io/locations/exterior-decorating-doncaster/",
-"sameAs": ["https://www.facebook.com/profile.php?id=61584395621256"],
-"serviceType": "Exterior Decorating & Exterior House Painting",
-"priceRange": "££"
-}
-</script>
 
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [{
-"@type": "Question",
-"name": "How much does exterior painting cost in Doncaster?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Most Doncaster homes cost between £250–£1,200 depending on size and condition. Free quotes are available."
-}
-},{
-"@type": "Question",
-"name": "Do you prepare the surfaces first?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, all jobs include cleaning, sanding, scraping and priming before painting."
-}
-},{
-"@type": "Question",
-"name": "Are you insured?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, we are fully insured for all exterior decorating work."
-}
-}]
+"serviceType": [
+"Exterior Decorating",
+"Exterior House Painting",
+"Masonry Painting",
+"Fence Painting",
+"Wood Staining"
+],
+
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+],
+
+"priceRange": "££"
 }
 </script>
 
