--- a/location/woodlands.html
+++ b/location/woodlands.html
@@ -1,7 +1,3 @@
-martin steel <martinsteel940@gmail.com>
-08:12 (18 minutes ago)
-to me
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,14 +5,13 @@ to me
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Exterior House Painting in Doncaster | Professional Exterior Decorating DN1–DN12</title>
+<title>Exterior House Painting in Woodlands DN6 | Professional Exterior Decorating</title>
 
-<meta name="description" content="Reliable and affordable exterior house painting in Doncaster. Specialist in masonry painting, fence painting, wood staining and full exterior restoration across DN1–DN12. Local, insured, trusted decorator.">
+<meta name="description" content="Professional exterior decorating and house painting services in Woodlands, DN6. Specialising in masonry painting, fence painting, wood staining and full exterior restoration. Trusted local decorator with free quotes.">
 
-<link rel="canonical" href="https://steely1968.github.io/location/woodlands/">
+<link rel="canonical" href="https://steely1968.github.io/location/woodlands">
 
 <style>
-/* Retains original page visual style */
 body {
 margin: 0;
 font-family: Arial, sans-serif;
@@ -105,7 +100,7 @@ text-decoration: underline;
 <body>
 
 <header>
-<img src="https://steely1968.github.io/logo.png" alt="Home Maintenance Services Doncaster - Local Exterior Decorator">
+<img src="https://steely1968.github.io/logo.png" alt="Home Maintenance Services Logo - Woodlands DN6 Exterior Decorator">
 <nav>
 <a href="/">Home</a>
 <a href="/our-services/exterior-decorating">Exterior Decorating</a>
@@ -116,80 +111,74 @@ text-decoration: underline;
 
 <main>
 
-<h1>Exterior House Painting in Doncaster (DN1–DN12)</h1>
+<h1>Exterior House Painting & Decorating in Woodlands, DN6</h1>
 
-<p>Looking for a reliable, skilled and affordable <strong>exterior house painter in Doncaster</strong>? We provide a full range of exterior decorating services across all Doncaster postcodes, including DN1–DN12. With years of experience, professional materials and attention to detail, we help homeowners protect and transform their properties with clean, long-lasting exterior finishes.</p>
+<p>Protect and enhance your home with professional <strong>exterior decorating and house painting services in Woodlands, DN6</strong>. From fresh masonry coats to fence restoration and wood staining, we deliver high-quality results tailored to each property. Our team focuses on long-lasting finishes, precise preparation, and expert application to keep your home looking its best for years to come.</p>
 
-<p>Whether your home needs a fresh coat of masonry paint, a full exterior colour update, or a tidy-up of fences and timberwork, we deliver neat, durable results and friendly customer service throughout every job.</p>
+<p>We understand that every home is unique. That’s why we carefully assess each exterior surface, providing expert recommendations on paint, colours, and coatings to ensure both beauty and durability. Whether it’s brickwork, render, timber fencing, or gates, we guarantee a professional finish on every project.</p>
 
-<h2>Professional Exterior Decorating in Doncaster</h2>
-<p>We use trusted, weather-resistant paint systems including <strong>Sandtex masonry paint</strong> and premium exterior coatings designed to stay bright and protective year after year.</p>
+<h2>Exterior Decorating Services We Offer in Woodlands</h2>
 
 <ul>
-<li>Exterior masonry & render painting</li>
-<li>Brick, stone & concrete painting</li>
-<li>Fence, gate & shed painting</li>
-<li>Wood staining, varnishing & restoration</li>
-<li>Cleaning, sanding & priming for long-lasting adhesion</li>
-<li>Flaking paint removal & exterior preparation</li>
-<li>UPVC cleaning and colour restoration</li>
+<li>Exterior wall & masonry painting (brick, stone, render)</li>
+<li>Fence, gate & shed painting and restoration</li>
+<li>Wood staining, varnishing & protective coatings</li>
+<li>Surface preparation including washing, sanding, and priming</li>
+<li>Weatherproof coatings for long-lasting protection</li>
+<li>Colour matching and expert finish advice</li>
 </ul>
 
-<h2>Why Doncaster Customers Choose Us</h2>
+<h2>Why Choose Us in Woodlands, DN6</h2>
 
 <div class="quick-facts">
 <ul>
-<li>Trusted local exterior decorator covering the whole Doncaster area</li>
-<li>Premium paints (including Sandtex) for durable, weatherproof results</li>
-<li>Fully insured, friendly and reliable service</li>
-<li>No call-out fees – honest, affordable quotes</li>
-<li>Clear communication and tidy work from start to finish</li>
+<li>Trusted local handyman and exterior decorator in Woodlands</li>
+<li>Professional finishes using high-quality paints, including Sandtex</li>
+<li>Fully insured, reliable, and friendly service</li>
+<li>Free, no-obligation quotes — no hidden call-out fees</li>
+<li>Residential and commercial properties covered</li>
 </ul>
 </div>
 
-<h2>Areas We Cover in Doncaster</h2>
-<p>We work across all Doncaster postcodes including:</p>
+<h2>Areas We Serve Around Woodlands</h2>
+<p>We provide exterior decorating services to the wider DN6 area, including:</p>
 
 <ul>
-<li>DN1 – Doncaster Town Centre</li>
-<li>DN2 – Intake, Wheatley</li>
-<li>DN3 – Armthorpe, Edenthorpe</li>
-<li>DN4 – Bessacarr, Balby</li>
-<li>DN5 – Bentley, Scawthorpe</li>
-<li>DN6 – <strong>Askern</strong>, Campsall, Norton</li>
-<li>DN7 – Stainforth, Hatfield</li>
-<li>DN11, DN12 – Tickhill, Conisbrough, Mexborough</li>
+<li>Woodlands</li>
+<li>Askern</li>
+<li>Brodsworth</li>
+<li>Adwick le Street</li>
+<li>Shaftholme and surrounding areas</li>
 </ul>
 
-<p>No matter which part of Doncaster you’re in, we offer flexible booking times and quick response.</p>
+<p>Our team offers quick response times and flexible scheduling to meet the needs of all properties in the DN6 area.</p>
 
 <h2>View Our Work</h2>
-<p>See a recent transformation using Sandtex Brick Red:</p>
-
-<p><a href="/our-services/exterior-decorating"><strong>View Before & After Project →</strong></a></p>
+<p>See examples of our recent exterior transformations, including masonry projects and fence restorations:</p>
+<p><a href="/our-services/exterior-decorating"><strong>View Before & After Projects →</strong></a></p>
 
 <h2>Frequently Asked Questions</h2>
 
-<h3>How much does exterior painting cost in Doncaster?</h3>
-<p>Most homes fall between <strong>£250–£1,200</strong> depending on size, materials and preparation needed. Every quote is free and no-obligation.</p>
+<h3>How much does exterior painting cost in Woodlands?</h3>
+<p>Costs depend on property size, surface type, and preparation required, but most DN6 homes are between <strong>£250–£1,200</strong>. Every quote is free and no-obligation.</p>
 
-<h3>Do you carry out full preparation?</h3>
-<p>Absolutely. We clean, sand, scrape and prime surfaces to ensure the best possible finish and long-lasting results.</p>
+<h3>Do you prepare surfaces before painting?</h3>
+<p>Yes. We clean, sand, scrape, and prime every surface to ensure a perfect, long-lasting finish.</p>
 
-<h3>Which paints do you use?</h3>
-<p>We use high-quality exterior systems such as Sandtex masonry paint and specialised external wood coatings for fences, gates and sheds.</p>
+<h3>Which paints do you use for exterior projects?</h3>
+<p>We use premium-quality paints, including Sandtex masonry paint for walls and specialist wood coatings for fences, gates, and sheds.</p>
 
 <h3>Is your work insured?</h3>
-<p>Yes — we are fully insured for residential and commercial properties.</p>
+<p>Yes. All exterior decorating and painting work is fully insured for residential and commercial properties.</p>
 
-<h2>Request a Free Quote</h2>
-<p>For high-quality <strong>exterior decorating and house painting in Doncaster</strong>, get in touch today for friendly advice or a free quote.</p>
+<h2>Get a Free Quote for Woodlands DN6</h2>
+<p>For professional <strong>exterior house painting and decorating in Woodlands</strong>, contact us today for friendly advice or a free quote.</p>
 <p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
 
 <footer>
-<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Doncaster</p>
+<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Woodlands DN6</p>
 <p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener">Visit our Facebook Profile</a></p>
 </footer>
 
@@ -197,33 +186,30 @@ text-decoration: underline;
 document.getElementById("currentYear").textContent = new Date().getFullYear();
 </script>
 
-<!-- Corrected Service Area Business Schema -->
+<!-- Service Area Business Schema for Woodlands DN6 -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
 "@type": "HomeAndConstructionBusiness",
-"name": "Home Maintenance Services Doncaster",
-"url": "https://steely1968.github.io/locations/exterior-decorating-doncaster/",
+"name": "Home Maintenance Services Woodlands DN6",
+"url": "https://steely1968.github.io/location/woodlands",
 "image": "https://steely1968.github.io/logo.png",
 "telephone": "07735873694",
-"description": "Exterior house painting and professional exterior decorating across Doncaster DN1–DN12.",
-
+"description": "Exterior house painting and professional exterior decorating services across Woodlands DN6, including masonry painting, fence painting, and wood staining.",
 "areaServed": [
-{ "@type": "City", "name": "Doncaster" },
-{ "@type": "AdministrativeArea", "name": "DN1–DN12" }
+{ "@type": "City", "name": "Woodlands" },
+{ "@type": "AdministrativeArea", "name": "DN6" }
 ],
-
 "serviceArea": {
 "@type": "Place",
 "address": {
 "@type": "PostalAddress",
-"addressLocality": "Doncaster",
+"addressLocality": "Woodlands",
 "addressRegion": "South Yorkshire",
-"postalCode": "DN",
+"postalCode": "DN6",
 "addressCountry": "GB"
 }
 },
-
 "serviceType": [
 "Exterior Decorating",
 "Exterior House Painting",
@@ -231,11 +217,9 @@ document.getElementById("currentYear").textContent = new Date().getFullYear();
 "Fence Painting",
 "Wood Staining"
 ],
-
 "sameAs": [
 "https://www.facebook.com/profile.php?id=61584395621256"
 ],
-
 "priceRange": "££"
 }
 </script>
