--- a/location/askern.html
+++ b/location/askern.html
@@ -12,88 +12,20 @@
 <link rel="canonical" href="https://steely1968.github.io/location/askern">
 
 <style>
-body {
-margin: 0;
-font-family: Arial, sans-serif;
-line-height: 1.6;
-background: #fff;
-color: #000;
-}
-
-header {
-display: flex;
-align-items: center;
-justify-content: space-between;
-padding: 15px 20px;
-background: #f4f4f4;
-border-bottom: 2px solid #ddd;
-}
-
-header img {
-height: 90px;
-}
-
-nav {
-display: flex;
-align-items: center;
-gap: 15px;
-}
-
-nav a {
-padding: 10px 16px;
-border-radius: 6px;
-font-weight: bold;
-text-decoration: none;
-color: #000;
-}
-
-nav a:hover {
-background: #e2e2e2;
-}
-
-.call-button {
-background: #1a7f33;
-color: #fff;
-}
-
-.call-button:hover {
-background: #166b2b;
-}
-
-main {
-max-width: 900px;
-margin: auto;
-padding: 20px;
-}
-
-h1, h2 {
-margin-top: 10px;
-}
-
-.quick-facts {
-background: #f8f8f8;
-padding: 20px;
-border-radius: 10px;
-border: 1px solid #ddd;
-margin: 25px 0;
-}
-
-footer {
-padding: 25px;
-text-align: center;
-font-size: 14px;
-color: #666;
-border-top: 1px solid #ddd;
-}
-
-footer a {
-color: #1864d8;
-text-decoration: none;
-}
-
-footer a:hover {
-text-decoration: underline;
-}
+body {margin:0;font-family:Arial,sans-serif;line-height:1.6;background:#fff;color:#000;}
+header {display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
+header img{height:90px;}
+nav{display:flex;align-items:center;gap:15px;}
+nav a{padding:10px 16px;border-radius:6px;font-weight:bold;text-decoration:none;color:#000;}
+nav a:hover{background:#e2e2e2;}
+.call-button{background:#1a7f33;color:#fff;}
+.call-button:hover{background:#166b2b;}
+main{max-width:900px;margin:auto;padding:20px;}
+h1,h2{margin-top:10px;}
+.quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
+footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
+footer a{color:#1864d8;text-decoration:none;}
+footer a:hover{text-decoration:underline;}
 </style>
 
 </head>
@@ -113,67 +45,52 @@ text-decoration: underline;
 
 <h1>Exterior House Painting & Decorating in Askern, DN6</h1>
 
-<p>Enhance the look and durability of your home with professional <strong>exterior decorating and house painting in Askern, DN6</strong>. Whether you’re looking for a full exterior renovation, masonry painting, or fence and woodwork restoration, our expert team delivers precise, long-lasting results tailored to your property. With years of experience serving Askern residents, we combine high-quality paints, expert preparation, and attention to detail for a flawless finish.</p>
+<p>Enhance your home with professional <strong>exterior decorating and house painting in Askern, DN6</strong>. From masonry painting to fence restoration and woodwork staining, our team provides expert service with long-lasting results. Every property is treated individually to ensure a flawless, weather-resistant finish that improves both appearance and value.</p>
 
-<p>We understand that every property is unique. Our team evaluates each exterior surface, offering advice on the best paint systems, finishes, and colour options to suit your home. From brickwork and render to gates and fences, we guarantee a professional, durable finish that enhances your home’s value and appearance.</p>
-
-<h2>Exterior Decorating Services in Askern</h2>
-
+<h2>Our Services in Askern</h2>
 <ul>
-<li>Exterior masonry & render painting</li>
+<li>Exterior wall & masonry painting</li>
 <li>Fence, gate & shed painting and restoration</li>
-<li>Wood staining, varnishing & protective coatings</li>
-<li>Surface preparation including cleaning, sanding, and priming</li>
-<li>Weatherproof coatings for long-lasting protection</li>
-<li>Colour matching and professional finish advice</li>
+<li>Wood staining & protective coatings</li>
+<li>Surface preparation: cleaning, sanding, priming</li>
+<li>Weatherproof coatings</li>
+<li>Colour matching & expert finish advice</li>
 </ul>
 
-<h2>Why Choose Us in Askern, DN6</h2>
-
+<h2>Why Choose Us</h2>
 <div class="quick-facts">
 <ul>
-<li>Trusted local exterior decorator in Askern</li>
-<li>Premium paints including Sandtex for professional, durable finishes</li>
-<li>Fully insured, reliable, and friendly service</li>
-<li>Free, no-obligation quotes with no hidden call-out fees</li>
-<li>Residential and commercial properties covered</li>
+<li>Trusted local exterior decorator in Askern DN6</li>
+<li>Premium paints including Sandtex</li>
+<li>Friendly, reliable, fully insured</li>
+<li>Free, no-obligation quotes</li>
+<li>Residential and commercial properties</li>
 </ul>
 </div>
 
-<h2>Areas We Serve Around Askern</h2>
-<p>We provide exterior decorating services across the DN6 area, including:</p>
-
+<h2>Areas We Serve</h2>
 <ul>
 <li>Askern</li>
 <li>Woodlands</li>
 <li>Campsall</li>
 <li>Norton</li>
-<li>Balby and nearby communities</li>
+<li>Balby</li>
 </ul>
 
-<p>Our team ensures fast response times, flexible scheduling, and reliable service for all properties in Askern and the surrounding DN6 area.</p>
-
-<h2>View Our Work</h2>
-<p>See examples of our exterior painting and decorating projects, including masonry and fence transformations:</p>
-<p><a href="/our-services/exterior-decorating"><strong>View Before & After Projects →</strong></a></p>
-
-<h2>Frequently Asked Questions</h2>
-
+<h2>FAQs</h2>
 <h3>How much does exterior painting cost in Askern?</h3>
-<p>Costs vary depending on property size, surface type, and preparation required. Most DN6 homes fall between <strong>£250–£1,200</strong>. Every quote is free and no-obligation.</p>
+<p>Typical cost: £250–£1,200 depending on property size and prep. Free quotes provided.</p>
 
 <h3>Do you prepare surfaces before painting?</h3>
-<p>Yes. All surfaces are cleaned, sanded, scraped, and primed to ensure a long-lasting, professional finish.</p>
+<p>Yes, all surfaces are cleaned, sanded, and primed for lasting results.</p>
 
-<h3>Which paints do you use for exterior projects?</h3>
-<p>We use premium-quality paints, including Sandtex masonry paint for walls and specialist exterior wood coatings for fences, gates, and sheds.</p>
+<h3>Which paints do you use?</h3>
+<p>Premium Sandtex masonry paint and specialist wood coatings.</p>
 
 <h3>Is your work insured?</h3>
-<p>Yes. All projects are fully insured for peace of mind for both residential and commercial properties.</p>
+<p>Yes, fully insured for peace of mind.</p>
 
-<h2>Get a Free Quote for Askern DN6</h2>
-<p>For trusted, professional <strong>exterior house painting and decorating in Askern</strong>, contact us today for advice or a free quote.</p>
-<p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
+<p>For a free exterior decorating quote in Askern DN6, <strong>call:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
 
@@ -186,7 +103,6 @@ text-decoration: underline;
 document.getElementById("currentYear").textContent = new Date().getFullYear();
 </script>
 
-<!-- Service Area Business Schema for Askern DN6 -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -200,27 +116,9 @@ document.getElementById("currentYear").textContent = new Date().getFullYear();
 { "@type": "City", "name": "Askern" },
 { "@type": "AdministrativeArea", "name": "DN6" }
 ],
-"serviceArea": {
-"@type": "Place",
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"addressRegion": "South Yorkshire",
-"postalCode": "DN6",
-"addressCountry": "GB"
-}
-},
-"serviceType": [
-"Exterior Decorating",
-"Exterior House Painting",
-"Masonry Painting",
-"Fence Painting",
-"Wood Staining"
-],
-"sameAs": [
-"https://www.facebook.com/profile.php?id=61584395621256"
-],
-"priceRange": "££"
+"serviceType": ["Exterior Decorating","Exterior House Painting","Masonry Painting","Fence Painting","Wood Staining"],
+"sameAs":["https://www.facebook.com/profile.php?id=61584395621256"],
+"priceRange":"££"
 }
 </script>
 
