--- a/location/askern.html
+++ b/location/askern.html
@@ -103,7 +103,7 @@ footer a:hover{text-decoration:underline;}
 document.getElementById("currentYear").textContent = new Date().getFullYear();
 </script>
 
-<!-- Structured Data -->
+<!-- Corrected Structured Data -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
