--- a/location/campsall.html
+++ b/location/campsall.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>Exterior House Painting in Campsall, Doncaster | Professional Exterior Decorating</title>
+
+<meta name="description" content="Expert exterior decorating and house painting services in Campsall, Doncaster. Specialising in masonry painting, fence painting, wood staining, and full exterior restoration. Trusted local decorator with free quotes.">
+
+<link rel="canonical" href="https://steely1968.github.io/location/campsall">
+
+<style>
+body {margin:0;font-family:Arial,sans-serif;line-height:1.6;background:#fff;color:#000;}
+header {display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
+header img {
+height: 90px;
+width: auto;
+max-width: none;
+}
+nav{display:flex;align-items:center;gap:15px;}
+nav a{padding:10px 16px;border-radius:6px;font-weight:bold;text-decoration:none;color:#000;}
+nav a:hover{background:#e2e2e2;}
+.call-button{background:#1a7f33;color:#fff;}
+.call-button:hover{background:#166b2b;}
+main{max-width:900px;margin:auto;padding:20px;}
+h1,h2{margin-top:10px;}
+.quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
+footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
+footer a{color:#1864d8;text-decoration:none;}
+footer a:hover{text-decoration:underline;}
+</style>
+
+</head>
+<body>
+
+<header>
+<img src="https://steely1968.github.io/logo.png" alt="Home Maintenance Services Logo - Campsall Exterior Decorator">
+<nav aria-label="Main navigation">
+<a href="/">Home</a>
+<a href="/our-services/exterior-decorating">Exterior Decorating</a>
+<a href="/contact">Contact</a>
+<a href="tel:07735873694" class="call-button">Call 07735 873694</a>
+</nav>
+</header>
+
+<main>
+
+<h1>Exterior House Painting & Decorating in Campsall, Doncaster</h1>
+
+<p>Transform your property with professional <strong>exterior decorating and house painting in Campsall, Doncaster</strong>. Whether it’s masonry, fences, gates, or woodwork, our skilled team delivers durable, weather-resistant finishes that enhance your home’s appearance and value. Every project is tailored to suit the individual property and customer requirements.</p>
+
+<h2>Our Campsall Services</h2>
+<ul>
+<li>Exterior walls & masonry painting</li>
+<li>Fence, gate & shed restoration and painting</li>
+<li>Wood staining & protective coatings</li>
+<li>Surface preparation including cleaning, sanding, priming</li>
+<li>Weatherproof coatings for long-lasting protection</li>
+<li>Colour consultation and expert finish advice</li>
+</ul>
+
+<h2>Why Choose Us</h2>
+<div class="quick-facts">
+<ul>
+<li>Trusted local exterior decorator in Campsall, Doncaster</li>
+<li>High-quality paints including Sandtex</li>
+<li>Reliable, friendly, and fully insured</li>
+<li>Free, no-obligation quotes</li>
+<li>Residential and commercial services</li>
+</ul>
+</div>
+
+<h2>Areas We Serve</h2>
+<ul>
+<li>Campsall</li>
+<li>Askern</li>
+<li>Woodlands</li>
+<li>Norton</li>
+<li>Balby</li>
+</ul>
+
+<h2>FAQs</h2>
+<h3>How much does exterior painting cost in Campsall?</h3>
+<p>Typical costs range from £250–£1,200 depending on property size and preparation. Free quotes are available.</p>
+
+<h3>Do you prepare surfaces before painting?</h3>
+<p>Yes, all surfaces are cleaned, sanded, and primed to ensure long-lasting results.</p>
+
+<h3>Which paints do you use?</h3>
+<p>We use premium Sandtex masonry paint and specialist coatings for wood.</p>
+
+<h3>Is your work insured?</h3>
+<p>Yes, our services are fully insured for your peace of mind.</p>
+
+<p>For a free exterior decorating quote in Campsall, Doncaster, <strong>call:</strong> <a href="tel:07735873694">07735 873694</a></p>
+
+</main>
+
+<footer>
+<p>&copy; <span id="currentYear"></span> Home Maintenance Services – Campsall, Doncaster</p>
+<p><a href="https://www.facebook.com/profile.php?id=61584395621256" target="_blank" rel="noopener">Visit our Facebook Profile</a></p>
+</footer>
+
+<script>
+document.getElementById("currentYear").textContent = new Date().getFullYear();
+</script>
+
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "HomeAndConstructionBusiness",
+"name": "Home Maintenance Services Campsall, Doncaster",
+"image": "https://steely1968.github.io/logo.png",
+"url": "https://steely1968.github.io/location/campsall",
+"telephone": "07735873694",
+"description": "Exterior house painting and professional exterior decorating services across Campsall, Doncaster, including masonry painting, fence painting, and wood staining.",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "Your Street Address",
+"addressLocality": "Campsall",
+"postalCode": "DN6",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.568,
+"longitude": -1.065
+},
+"areaServed": [
+{ "@type": "City", "name": "Campsall" },
+{ "@type": "AdministrativeArea", "name": "Doncaster" }
+],
+"serviceType": [
+"Exterior Decorating",
+"Exterior House Painting",
+"Masonry Painting",
+"Fence Painting",
+"Wood Staining"
+],
+"sameAs": ["https://www.facebook.com/profile.php?id=61584395621256"],
+"priceRange": "££",
+"openingHours": "Mo-Fr 09:00-17:00"
+}
+</script>
+
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "Organization",
+"name": "Home Maintenance Services Campsall, Doncaster",
+"url": "https://steely1968.github.io/location/campsall",
+"logo": "https://steely1968.github.io/logo.png",
+"sameAs": ["https://www.facebook.com/profile.php?id=61584395621256"]
+}
+</script>
+
+</body>
+</html>
