--- a/location/campsall.html
+++ b/location/campsall.html
@@ -5,20 +5,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Exterior House Painting in Campsall, Doncaster | Professional Exterior Decorating</title>
+<title>Exterior House Painting in Campsall, Doncaster | Local Professional Decorating</title>
 
-<meta name="description" content="Expert exterior decorating and house painting services in Campsall, Doncaster. Specialising in masonry painting, fence painting, wood staining, and full exterior restoration. Trusted local decorator with free quotes.">
+<meta name="description" content="Top-quality exterior house painting and decorating services in Campsall, Doncaster. Specialising in masonry painting, fence restoration, and woodwork finishing. Friendly local decorator providing free quotes.">
 
 <link rel="canonical" href="https://steely1968.github.io/location/campsall">
 
 <style>
 body {margin:0;font-family:Arial,sans-serif;line-height:1.6;background:#fff;color:#000;}
 header {display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
-header img {
-height: 90px;
-width: auto;
-max-width: none;
-}
+header img {height: 90px;width: auto;max-width: none;}
 nav{display:flex;align-items:center;gap:15px;}
 nav a{padding:10px 16px;border-radius:6px;font-weight:bold;text-decoration:none;color:#000;}
 nav a:hover{background:#e2e2e2;}
@@ -49,52 +45,53 @@ footer a:hover{text-decoration:underline;}
 
 <h1>Exterior House Painting & Decorating in Campsall, Doncaster</h1>
 
-<p>Transform your property with professional <strong>exterior decorating and house painting in Campsall, Doncaster</strong>. Whether it’s masonry, fences, gates, or woodwork, our skilled team delivers durable, weather-resistant finishes that enhance your home’s appearance and value. Every project is tailored to suit the individual property and customer requirements.</p>
+<p>Enhance the charm of your Campsall home with professional <strong>exterior decorating and house painting</strong>. From traditional brick terraces to modern detached homes, we provide tailored solutions that withstand the local weather. Every property is prepared carefully, ensuring long-lasting results that improve both appearance and value.</p>
 
 <h2>Our Campsall Services</h2>
 <ul>
-<li>Exterior walls & masonry painting</li>
-<li>Fence, gate & shed restoration and painting</li>
-<li>Wood staining & protective coatings</li>
-<li>Surface preparation including cleaning, sanding, priming</li>
-<li>Weatherproof coatings for long-lasting protection</li>
-<li>Colour consultation and expert finish advice</li>
+<li>Painting of exterior walls and masonry, including brickwork and render</li>
+<li>Fence, gate, and shed restoration with expert painting</li>
+<li>Wood staining and protective finishes for doors, windows, and timber features</li>
+<li>Full surface preparation: cleaning, sanding, priming, and repairs</li>
+<li>Weatherproof coatings suitable for the Doncaster climate</li>
+<li>Colour consultation to match your property’s style</li>
 </ul>
 
-<h2>Why Choose Us</h2>
+<h2>Why Campsall Homeowners Choose Us</h2>
 <div class="quick-facts">
 <ul>
-<li>Trusted local exterior decorator in Campsall, Doncaster</li>
-<li>High-quality paints including Sandtex</li>
-<li>Reliable, friendly, and fully insured</li>
-<li>Free, no-obligation quotes</li>
-<li>Residential and commercial services</li>
+<li>Locally trusted decorator serving Campsall and nearby areas</li>
+<li>High-quality paints including Sandtex for masonry and specialist wood coatings</li>
+<li>Friendly, reliable team with full public liability insurance</li>
+<li>Free, no-obligation quotes tailored to each property</li>
+<li>Residential and small commercial projects welcomed</li>
 </ul>
 </div>
 
-<h2>Areas We Serve</h2>
+<h2>Areas We Cover</h2>
 <ul>
-<li>Campsall</li>
+<li>Campsall village and surrounding streets</li>
 <li>Askern</li>
 <li>Woodlands</li>
 <li>Norton</li>
 <li>Balby</li>
 </ul>
 
-<h2>FAQs</h2>
-<h3>How much does exterior painting cost in Campsall?</h3>
-<p>Typical costs range from £250–£1,200 depending on property size and preparation. Free quotes are available.</p>
+<h2>FAQs About Exterior Painting in Campsall</h2>
 
-<h3>Do you prepare surfaces before painting?</h3>
-<p>Yes, all surfaces are cleaned, sanded, and primed to ensure long-lasting results.</p>
+<h3>How long does a full exterior painting project take?</h3>
+<p>Typical projects take 2–5 days depending on property size, preparation work, and weather conditions.</p>
 
-<h3>Which paints do you use?</h3>
-<p>We use premium Sandtex masonry paint and specialist coatings for wood.</p>
+<h3>Do you provide advice on colours and finishes?</h3>
+<p>Yes, we offer free consultations to help choose durable, weather-resistant colours that complement your home.</p>
 
-<h3>Is your work insured?</h3>
-<p>Yes, our services are fully insured for your peace of mind.</p>
+<h3>Can you restore older timber fences and gates?</h3>
+<p>Absolutely. We clean, repair, and apply specialist wood coatings to bring timber features back to life.</p>
 
-<p>For a free exterior decorating quote in Campsall, Doncaster, <strong>call:</strong> <a href="tel:07735873694">07735 873694</a></p>
+<h3>Is your service insured?</h3>
+<p>Yes, all our work is fully insured, giving you complete peace of mind.</p>
+
+<p>For a free, no-obligation exterior decorating quote in Campsall, Doncaster, <strong>call:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
 
@@ -115,7 +112,7 @@ document.getElementById("currentYear").textContent = new Date().getFullYear();
 "image": "https://steely1968.github.io/logo.png",
 "url": "https://steely1968.github.io/location/campsall",
 "telephone": "07735873694",
-"description": "Exterior house painting and professional exterior decorating services across Campsall, Doncaster, including masonry painting, fence painting, and wood staining.",
+"description": "Exterior house painting and professional decorating services across Campsall, Doncaster, including masonry painting, fence restoration, and woodwork finishing.",
 "address": {
 "@type": "PostalAddress",
 "streetAddress": "Your Street Address",
@@ -136,7 +133,7 @@ document.getElementById("currentYear").textContent = new Date().getFullYear();
 "Exterior Decorating",
 "Exterior House Painting",
 "Masonry Painting",
-"Fence Painting",
+"Fence Restoration",
 "Wood Staining"
 ],
 "sameAs": ["https://www.facebook.com/profile.php?id=61584395621256"],
